Improved matching and updated for 2026 national series automatic entry file generation